# rfinder

./: README.md  main.js  package-lock.json  package.json  webpack.config.js
native/: Cargo.toml
native/src/: lib.rs
src/: app.js  index.html
src/main/: ipc.js  main.js
src/renderer/: index.js
src/renderer/components/: App.js
