[package]
name = "hello-test"
version = "0.1.0"
authors = ["Marcus Larsson <marcuslarsson_92@hotmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "hello_test"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
